@@ -3643,3 +3643,14 @@ Changes to be committed:
 	modified:   ZGame/T.ZGame.cs
 	modified:   ZGame/game_tutorials/Direct3D/3DS Model Loader/model.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/09/17.17_57_59.48.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
